# C4AI

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
documentation/: definitions.md  hours.md  implementation.md  instructions.md  testing.md  weekly_report_1.md  weekly_report_2.md  weekly_report_3.md  weekly_report_4.md  weekly_report_5.md  weekly_report_6.md
src/: config.py  index.py  simulation.py
src/entities/: coin.py  grid.py  player.py  position.py  sprites.py  transposition_table.py
src/services/: ai_service.py  bitboard_service.py  board_service.py  clock_service.py  event_queue_service.py  game_service.py  heuristic_service.py  simulation_service.py  situation_service.py
src/tests/: test_grids.py  test_locs.py
src/tests/entities/: position_test.py  sprites_test.py  transposition_table_test.py
src/tests/services/: ai_service_test.py  bitboard_service_test.py  board_service_test.py  game_service_test.py  heuristic_service_test.py  situation_service_test.py
src/ui/: menu_view.py  renderer.py  setup_view.py  ui.py
