[tool.poetry]
name = "c4ai"
version = "0.1.0"
description = ""
authors = ["Topias Harjunpää <topias.harjunpaa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.1"
pygame = "^2.1.2"
python-dotenv = "^0.20.0"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.2"
pylint = "^2.14.5"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
